// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
no error

======
ERROR: (conditional-expression-parens) /src/vrsource-tslint-rules/conditional-expression-parens/test.ts[1, 9]: Expression clause must be parenthesized

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
let x = (y > 30) ? \\"left\\" : \\"right\\";

======
let x = y > 30 ? \\"left\\" : \\"right\\";

>>>>>> after
"
`;
